# StirlingPDFAssistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  api_spec.json  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/bot/: Dockerfile
docker/telegram-bot-api/: Dockerfile
docs/: api_integration.md  architecture.md  commands.md  plan.md  technical_summary.md  user_management.md
docs/specs/: local-telegram-bot-api.md
scripts/: api_validate.py
src/stirlingpdf_assistant/: main.py
src/stirlingpdf_assistant/api/: client.py  tools.py
src/stirlingpdf_assistant/api/tools/: __init__.py  base.py  conversion.py  general.py  security.py
src/stirlingpdf_assistant/bot/: decorators.py  handlers.py
src/stirlingpdf_assistant/utils/: i18n.py  user_manager.py
tests/: test_auth.py  test_integration_api.py  test_ocr.py  test_tools.py  test_user_manager.py
